--- a/fpga/gowin/system_run/jcs/impl/gwsynthesis/jcs_syn.rpt.html
+++ b/fpga/gowin/system_run/jcs/impl/gwsynthesis/jcs_syn.rpt.html
@@ -55,13 +55,7 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>/home/cyh/chiplab/fpga/gowin/gowin_ip/gowin_pll/gowin_pll.v<br>
-/home/cyh/chiplab/fpga/gowin/gowin_ip/gowin_sdpb/SRAM_SDPB.v<br>
-/home/cyh/chiplab/fpga/gowin/gowin_ip/SP_256x21/SP_256x21.v<br>
-/home/cyh/chiplab/fpga/gowin/gowin_ip/SP_256x32/SP_256x32.v<br>
-/home/cyh/chiplab/fpga/gowin/gowin_ip/xilinx2gowin.v<br>
-/home/cyh/chiplab/fpga/gowin/camera-hdmi/ddr3_memory_interface/ddr3_memory_interface.v<br>
-/home/cyh/chiplab/IP/open-la500/addr_trans.v<br>
+<td>/home/cyh/chiplab/IP/open-la500/addr_trans.v<br>
 /home/cyh/chiplab/IP/open-la500/alu.v<br>
 /home/cyh/chiplab/IP/open-la500/axi_bridge.v<br>
 /home/cyh/chiplab/IP/open-la500/btb.v<br>
@@ -80,6 +74,12 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 /home/cyh/chiplab/IP/open-la500/tlb_entry.v<br>
 /home/cyh/chiplab/IP/open-la500/tools.v<br>
 /home/cyh/chiplab/IP/open-la500/wb_stage.v<br>
+/home/cyh/chiplab/fpga/gowin/camera-hdmi/ddr3_memory_interface/ddr3_memory_interface.v<br>
+/home/cyh/chiplab/fpga/gowin/gowin_ip/SP_256x21/SP_256x21.v<br>
+/home/cyh/chiplab/fpga/gowin/gowin_ip/SP_256x32/SP_256x32.v<br>
+/home/cyh/chiplab/fpga/gowin/gowin_ip/gowin_pll/gowin_pll.v<br>
+/home/cyh/chiplab/fpga/gowin/gowin_ip/gowin_sdpb/SRAM_SDPB.v<br>
+/home/cyh/chiplab/fpga/gowin/gowin_ip/xilinx2gowin.v<br>
 /home/cyh/chiplab/soc/build/SoCFull.v<br>
 /home/cyh/chiplab/soc/perip/spi/sd_ctrl_read.v<br>
 /home/cyh/chiplab/soc/perip/spi/sd_ctrl_read_top.v<br>
@@ -96,13 +96,6 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 /home/cyh/chiplab/soc/perip/uart16550/rtl/uart_tfifo.v<br>
 /home/cyh/chiplab/soc/perip/uart16550/rtl/uart_top_apb.v<br>
 /home/cyh/chiplab/soc/perip/uart16550/rtl/uart_transmitter.v<br>
-/home/cyh/gowin/IDE/data/ipcores/GAO/GW_AO_0/gw_ao_crc32.v<br>
-/home/cyh/gowin/IDE/data/ipcores/GAO/GW_AO_0/gw_ao_match.v<br>
-/home/cyh/gowin/IDE/data/ipcores/GAO/GW_AO_0/gw_ao_mem_ctrl.v<br>
-/home/cyh/gowin/IDE/data/ipcores/GAO/GW_AO_0/gw_ao_top.v<br>
-/home/cyh/gowin/IDE/data/ipcores/GAO/GW_CON/gw_con_top_138.v<br>
-/home/cyh/gowin/IDE/data/ipcores/gw_jtag.v<br>
-/home/cyh/chiplab/fpga/gowin/system_run/jcs/impl/gwsynthesis/RTL_GAO/gw_gao_top.v<br>
 </td>
 </tr>
 <tr>
@@ -127,7 +120,7 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Tue May 14 14:18:19 2024
+<td>Thu May 16 23:32:27 2024
 </td>
 </tr>
 <tr>
@@ -143,11 +136,11 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">Synthesis Process</td>
-<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s, Peak memory usage = 2632.434MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 2632.434MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 2632.434MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s, Peak memory usage = 2632.434MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 37s, Elapsed time = 0h 0m 34s, Peak memory usage = 3044.184MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0.024s, Elapsed time = 0h 0m 0.022s, Peak memory usage = 3044.184MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0.226s, Elapsed time = 0h 0m 0.222s, Peak memory usage = 3044.184MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0.07s, Elapsed time = 0h 0m 0.069s, Peak memory usage = 3044.184MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s, Peak memory usage = 3044.184MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0.626s, Elapsed time = 0h 0m 0.622s, Peak memory usage = 3044.184MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0.915s, Elapsed time = 0h 0m 0.911s, Peak memory usage = 3044.184MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 49s, Elapsed time = 0h 0m 49s, Peak memory usage = 3052.934MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 3052.934MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 5s, Elapsed time = 0h 0m 5s, Peak memory usage = 3187.934MB<br/></td>
+<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 1787.367MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 1787.367MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.738s, Elapsed time = 0h 0m 0.732s, Peak memory usage = 1787.367MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 1787.367MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 28s, Elapsed time = 0h 0m 28s, Peak memory usage = 1787.367MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0.011s, Elapsed time = 0h 0m 0.01s, Peak memory usage = 1787.367MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0.177s, Elapsed time = 0h 0m 0.175s, Peak memory usage = 1787.367MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.06s, Peak memory usage = 1787.367MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s, Peak memory usage = 1787.367MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0.505s, Elapsed time = 0h 0m 0.501s, Peak memory usage = 1787.367MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0.796s, Elapsed time = 0h 0m 0.79s, Peak memory usage = 1787.367MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 51s, Elapsed time = 0h 0m 51s, Peak memory usage = 1787.367MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 1787.367MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 4s, Elapsed time = 0h 0m 4s, Peak memory usage = 1787.367MB<br/></td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 1m 46s, Elapsed time = 0h 1m 43s, Peak memory usage = 3187.934MB</td>
+<td>CPU time = 0h 1m 34s, Elapsed time = 0h 1m 34s, Peak memory usage = 1787.367MB</td>
 </tr>
 </table>
 <h1><a name="resource">Resource</a></h1>
@@ -159,19 +152,19 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label"><b>I/O Port </b></td>
-<td>93</td>
+<td>89</td>
 </tr>
 <tr>
 <td class="label"><b>I/O Buf </b></td>
-<td>87</td>
+<td>83</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspIBUF</td>
-<td>10</td>
+<td>7</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspOBUF</td>
-<td>36</td>
+<td>35</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspTBUF</td>
@@ -191,7 +184,7 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label"><b>Register </b></td>
-<td>23483</td>
+<td>18350</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFSE</td>
@@ -199,31 +192,31 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFRE</td>
-<td>13050</td>
+<td>12307</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFPE</td>
-<td>142</td>
+<td>106</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspDFFCE</td>
-<td>10195</td>
+<td>5841</td>
 </tr>
 <tr>
 <td class="label"><b>LUT </b></td>
-<td>23824</td>
+<td>21334</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT2</td>
-<td>2306</td>
+<td>1746</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT3</td>
-<td>11656</td>
+<td>10195</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT4</td>
-<td>9734</td>
+<td>9265</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspLUT6</td>
@@ -231,31 +224,27 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label"><b>MUX </b></td>
-<td>2017</td>
+<td>2016</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspMUX2</td>
 <td>2016</td>
 </tr>
 <tr>
-<td class="label">&nbsp&nbsp&nbsp&nbspMUX16</td>
-<td>1</td>
-</tr>
-<tr>
 <td class="label"><b>ALU </b></td>
-<td>6140</td>
+<td>6036</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspALU</td>
-<td>6140</td>
+<td>6036</td>
 </tr>
 <tr>
 <td class="label"><b>INV </b></td>
-<td>82</td>
+<td>77</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspINV</td>
-<td>82</td>
+<td>77</td>
 </tr>
 <tr>
 <td class="label"><b>IOLOGIC </b></td>
@@ -279,7 +268,7 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label"><b>BSRAM </b></td>
-<td>236</td>
+<td>175</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspSP</td>
@@ -291,7 +280,7 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp&nbsp&nbspSDPX9B</td>
-<td>77</td>
+<td>16</td>
 </tr>
 <tr>
 <td class="label"><b>CLOCK </b></td>
@@ -313,14 +302,6 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 <td class="label">&nbsp&nbsp&nbsp&nbspDDRDLL</td>
 <td>1</td>
 </tr>
-<tr>
-<td class="label"><b>Black Box </b></td>
-<td>1</td>
-</tr>
-<tr>
-<td class="label">&nbsp&nbsp&nbsp&nbspGW_JTAG</td>
-<td>1</td>
-</tr>
 </table>
 <h2><a name="utilization">Resource Utilization Summary</a></h2>
 <table class="summary_table">
@@ -331,13 +312,13 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>32454(26314 LUT, 6140 ALU) / 138240</td>
-<td>24%</td>
+<td>29847(23811 LUT, 6036 ALU) / 138240</td>
+<td>22%</td>
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>23483 / 139140</td>
-<td>17%</td>
+<td>18350 / 139140</td>
+<td>14%</td>
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp--Register as Latch</td>
@@ -346,13 +327,13 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">&nbsp&nbsp--Register as FF</td>
-<td>23483 / 139140</td>
-<td>17%</td>
+<td>18350 / 139140</td>
+<td>14%</td>
 </tr>
 <tr>
 <td class="label">BSRAM</td>
-<td>236 / 340</td>
-<td>70%</td>
+<td>175 / 340</td>
+<td>52%</td>
 </tr>
 </table>
 <h1><a name="timing">Timing</a></h1>
@@ -428,16 +409,16 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 <td>1</td>
 <td>clock</td>
 <td>50.000(MHz)</td>
-<td>146.542(MHz)</td>
-<td>9</td>
+<td>203.832(MHz)</td>
+<td>7</td>
 <td>TOP</td>
 </tr>
 <tr>
 <td>2</td>
 <td>pll_pll/PLL_inst/CLKOUT0.default_gen_clk</td>
 <td>25.000(MHz)</td>
-<td>37.439(MHz)</td>
-<td>20</td>
+<td>40.326(MHz)</td>
+<td>18</td>
 <td>TOP</td>
 </tr>
 <tr>
@@ -513,7 +494,7 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 <td>0.305</td>
 <td>tCL</td>
 <td>RR</td>
-<td>6576</td>
+<td>6282</td>
 <td>dmi/gw3_top/u_ddr_phy_top/fclkdiv/CLKOUT</td>
 </tr>
 <tr>
@@ -685,7 +666,7 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 <td>0.305</td>
 <td>tCL</td>
 <td>RR</td>
-<td>6576</td>
+<td>6282</td>
 <td>dmi/gw3_top/u_ddr_phy_top/fclkdiv/CLKOUT</td>
 </tr>
 <tr>
@@ -857,7 +838,7 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 <td>0.305</td>
 <td>tCL</td>
 <td>RR</td>
-<td>6576</td>
+<td>6282</td>
 <td>dmi/gw3_top/u_ddr_phy_top/fclkdiv/CLKOUT</td>
 </tr>
 <tr>
@@ -1029,7 +1010,7 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 <td>0.305</td>
 <td>tCL</td>
 <td>RR</td>
-<td>6576</td>
+<td>6282</td>
 <td>dmi/gw3_top/u_ddr_phy_top/fclkdiv/CLKOUT</td>
 </tr>
 <tr>
@@ -1151,31 +1132,31 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>1.594</td>
+<td>1.753</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
-<td>18.650</td>
+<td>1.336</td>
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>20.244</td>
+<td>3.089</td>
 </tr>
 <tr>
 <td class="label">From</td>
-<td>asic/lsdram/axi4asink/nodeOut_awsink/valid_reg_s0</td>
+<td>dmi/gw3_top/u_ddr_phy_top/u_ddr_phy_wds/data_lane_gen[3].u_ddr_phy_data_lane/u_ddr_phy_data_io/u_dqs</td>
 </tr>
 <tr>
 <td class="label">To</td>
-<td>gw_gao_inst_0/u_la0_top/u_ao_mem_ctrl/data_reg_dly_851_s0</td>
+<td>dmi/gw3_top/u_ddr_phy_top/u_ddr_phy_wds/data_lane_gen[3].u_ddr_phy_data_lane/u_ddr_phy_data_io/iserdes_gen[7].u_ides8_mem</td>
 </tr>
 <tr>
 <td class="label">Launch Clk</td>
-<td>dmi/gw3_top/u_ddr_phy_top/fclkdiv/CLKOUT.default_gen_clk[R]</td>
+<td>pll_pll/PLL_inst/CLKOUT2.default_gen_clk[R]</td>
 </tr>
 <tr>
 <td class="label">Latch Clk</td>
-<td>clock[R]</td>
+<td>pll_pll/PLL_inst/CLKOUT2.default_gen_clk[R]</td>
 </tr>
 </table>
 <b>Data Arrival Path:</b>
@@ -1189,204 +1170,44 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 <th>NODE</th>
 </tr>
 <tr>
-<td>10.000</td>
+<td>0.000</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>dmi/gw3_top/u_ddr_phy_top/fclkdiv/CLKOUT.default_gen_clk</td>
+<td>pll_pll/PLL_inst/CLKOUT2.default_gen_clk</td>
 </tr>
 <tr>
-<td>10.304</td>
-<td>0.305</td>
+<td>0.259</td>
+<td>0.259</td>
 <td>tCL</td>
 <td>RR</td>
-<td>6576</td>
-<td>dmi/gw3_top/u_ddr_phy_top/fclkdiv/CLKOUT</td>
+<td>103</td>
+<td>pll_pll/PLL_inst/CLKOUT2</td>
 </tr>
 <tr>
-<td>10.635</td>
+<td>0.589</td>
 <td>0.330</td>
 <td>tNET</td>
 <td>RR</td>
-<td>1</td>
-<td>asic/lsdram/axi4asink/nodeOut_awsink/valid_reg_s0/CLK</td>
+<td>5</td>
+<td>dmi/gw3_top/u_ddr_phy_top/u_ddr_phy_wds/data_lane_gen[3].u_ddr_phy_data_lane/u_ddr_phy_data_io/u_dqs/FCLK</td>
 </tr>
 <tr>
-<td>10.941</td>
-<td>0.306</td>
+<td>1.006</td>
+<td>0.417</td>
 <td>tC2Q</td>
 <td>RR</td>
-<td>2</td>
-<td>asic/lsdram/axi4asink/nodeOut_awsink/valid_reg_s0/Q</td>
+<td>8</td>
+<td>dmi/gw3_top/u_ddr_phy_top/u_ddr_phy_wds/data_lane_gen[3].u_ddr_phy_data_lane/u_ddr_phy_data_io/u_dqs/RPOINT[2]</td>
 </tr>
 <tr>
-<td>11.271</td>
+<td>1.336</td>
 <td>0.330</td>
 <td>tNET</td>
 <td>RR</td>
 <td>1</td>
-<td>asic/lsdram/msdram/accept_write_s2/I0</td>
-</tr>
-<tr>
-<td>11.734</td>
-<td>0.463</td>
-<td>tINS</td>
-<td>RR</td>
-<td>2</td>
-<td>asic/lsdram/msdram/accept_write_s2/F</td>
-</tr>
-<tr>
-<td>12.063</td>
-<td>0.330</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/accept_write_s4/I3</td>
-</tr>
-<tr>
-<td>12.294</td>
-<td>0.231</td>
-<td>tINS</td>
-<td>RR</td>
-<td>157</td>
-<td>asic/lsdram/msdram/accept_write_s4/F</td>
-</tr>
-<tr>
-<td>12.625</td>
-<td>0.330</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/is_write_s1/I0</td>
-</tr>
-<tr>
-<td>13.088</td>
-<td>0.463</td>
-<td>tINS</td>
-<td>RR</td>
-<td>66</td>
-<td>asic/lsdram/msdram/is_write_s1/F</td>
-</tr>
-<tr>
-<td>13.417</td>
-<td>0.330</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/addr_1_s0/S0</td>
-</tr>
-<tr>
-<td>13.619</td>
-<td>0.202</td>
-<td>tINS</td>
-<td>RR</td>
-<td>352</td>
-<td>asic/lsdram/msdram/addr_1_s0/O</td>
-</tr>
-<tr>
-<td>13.949</td>
-<td>0.330</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/_io_in_rdata_T_2_0_s7/I2</td>
-</tr>
-<tr>
-<td>14.355</td>
-<td>0.406</td>
-<td>tINS</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/_io_in_rdata_T_2_0_s7/F</td>
-</tr>
-<tr>
-<td>14.685</td>
-<td>0.330</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/_io_in_rdata_T_2_0_s3/I0</td>
-</tr>
-<tr>
-<td>15.148</td>
-<td>0.463</td>
-<td>tINS</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/_io_in_rdata_T_2_0_s3/F</td>
-</tr>
-<tr>
-<td>15.478</td>
-<td>0.330</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/_io_in_rdata_T_2_0_s1/I0</td>
-</tr>
-<tr>
-<td>15.941</td>
-<td>0.463</td>
-<td>tINS</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/_io_in_rdata_T_2_0_s1/F</td>
-</tr>
-<tr>
-<td>16.271</td>
-<td>0.330</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/_io_in_rdata_T_2_0_s0/I0</td>
-</tr>
-<tr>
-<td>16.734</td>
-<td>0.463</td>
-<td>tINS</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/_io_in_rdata_T_2_0_s0/F</td>
-</tr>
-<tr>
-<td>17.064</td>
-<td>0.330</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/_io_in_rdata_T_2_0_s/I0</td>
-</tr>
-<tr>
-<td>17.527</td>
-<td>0.463</td>
-<td>tINS</td>
-<td>RR</td>
-<td>2</td>
-<td>asic/lsdram/msdram/_io_in_rdata_T_2_0_s/F</td>
-</tr>
-<tr>
-<td>17.857</td>
-<td>0.330</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>asic/lsdram/msdram/asic_233_s0/I0</td>
-</tr>
-<tr>
-<td>18.320</td>
-<td>0.463</td>
-<td>tINS</td>
-<td>RR</td>
-<td>9</td>
-<td>asic/lsdram/msdram/asic_233_s0/F</td>
-</tr>
-<tr>
-<td>18.650</td>
-<td>0.330</td>
-<td>tNET</td>
-<td>RR</td>
-<td>1</td>
-<td>gw_gao_inst_0/u_la0_top/u_ao_mem_ctrl/data_reg_dly_851_s0/D</td>
+<td>dmi/gw3_top/u_ddr_phy_top/u_ddr_phy_wds/data_lane_gen[3].u_ddr_phy_data_lane/u_ddr_phy_data_io/iserdes_gen[7].u_ides8_mem/RADDR[2]</td>
 </tr>
 </table>
 <b>Data Required Path:</b>
@@ -1400,72 +1221,56 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 <th>NODE</th>
 </tr>
 <tr>
-<td>20.000</td>
+<td>2.500</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>clock</td>
+<td>pll_pll/PLL_inst/CLKOUT2.default_gen_clk</td>
 </tr>
 <tr>
-<td>20.000</td>
-<td>0.000</td>
+<td>2.759</td>
+<td>0.259</td>
 <td>tCL</td>
 <td>RR</td>
-<td>1</td>
-<td>clock_ibuf/I</td>
+<td>103</td>
+<td>pll_pll/PLL_inst/CLKOUT2</td>
 </tr>
 <tr>
-<td>20.000</td>
-<td>0.000</td>
-<td>tINS</td>
-<td>RR</td>
-<td>2370</td>
-<td>clock_ibuf/O</td>
-</tr>
-<tr>
-<td>20.330</td>
+<td>3.089</td>
 <td>0.330</td>
 <td>tNET</td>
 <td>RR</td>
 <td>1</td>
-<td>gw_gao_inst_0/u_la0_top/u_ao_mem_ctrl/data_reg_dly_851_s0/CLK</td>
+<td>dmi/gw3_top/u_ddr_phy_top/u_ddr_phy_wds/data_lane_gen[3].u_ddr_phy_data_lane/u_ddr_phy_data_io/iserdes_gen[7].u_ides8_mem/FCLK</td>
 </tr>
 <tr>
-<td>20.295</td>
-<td>-0.035</td>
-<td>tUnc</td>
-<td> </td>
-<td> </td>
-<td>gw_gao_inst_0/u_la0_top/u_ao_mem_ctrl/data_reg_dly_851_s0</td>
-</tr>
-<tr>
-<td>20.244</td>
-<td>-0.051</td>
+<td>3.089</td>
+<td>0.000</td>
 <td>tSu</td>
 <td> </td>
 <td>1</td>
-<td>gw_gao_inst_0/u_la0_top/u_ao_mem_ctrl/data_reg_dly_851_s0</td>
+<td>dmi/gw3_top/u_ddr_phy_top/u_ddr_phy_wds/data_lane_gen[3].u_ddr_phy_data_lane/u_ddr_phy_data_io/iserdes_gen[7].u_ides8_mem</td>
 </tr>
 </table>
 <b>Path Statistics:</b>
 <table class="summary_table">
 <tr>
 <td class="label">Clock Skew:</td>
-<td>-0.305</td>
+<td>0.000</td>
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>10.000</td>
+<td>2.500</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
-<td>11</td>
+<td>1</td>
 </tr>
 <tr>
 <td class="label">Arrival Clock Path Delay:</td><td> cell: 0.000, 0.000%; route: 0.330, 100.000%</td></tr>
 <tr>
-<td class="label">Arrival Data Path Delay:</td><td> cell: 4.080, 50.899%; route: 3.630, 45.284%; tC2Q: 0.306, 3.817%</td></tr>
+<td class="label">Arrival Data Path Delay:</td><td> cell: 0.000, 0.000%; route: 0.330, 44.164%; tC2Q: 0.417, 55.836%</td></tr>
 <tr>
 <td class="label">Required Clock Path Delay:</td><td> cell: 0.000, 0.000%; route: 0.330, 100.000%</td></tr>
 </table>
