--- a/fpga/gowin/system_run/jcs/impl/pnr/jcs.rpt.html
+++ b/fpga/gowin/system_run/jcs/impl/pnr/jcs.rpt.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Tue May 14 14:25:34 2024
+<td>Thu May 16 23:38:37 2024
 </td>
 </tr>
 <tr>
@@ -97,24 +97,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 22s, Elapsed time = 0h 0m 22s
-   Placement Phase 1: CPU time = 0h 0m 0.856s, Elapsed time = 0h 0m 0.846s
-   Placement Phase 2: CPU time = 0h 0m 47s, Elapsed time = 0h 0m 46s
-   Placement Phase 3: CPU time = 0h 0m 32s, Elapsed time = 0h 0m 32s
-   Total Placement: CPU time = 0h 1m 42s, Elapsed time = 0h 1m 41s
+   Placement Phase 0: CPU time = 0h 0m 18s, Elapsed time = 0h 0m 18s
+   Placement Phase 1: CPU time = 0h 0m 0.755s, Elapsed time = 0h 0m 0.748s
+   Placement Phase 2: CPU time = 0h 0m 41s, Elapsed time = 0h 0m 41s
+   Placement Phase 3: CPU time = 0h 0m 25s, Elapsed time = 0h 0m 25s
+   Total Placement: CPU time = 0h 1m 25s, Elapsed time = 0h 1m 25s
 Running routing:
-   Routing Phase 0: CPU time = 0h 0m 0.795s, Elapsed time = 0h 0m 0.793s
-   Routing Phase 1: CPU time = 0h 5m 12s, Elapsed time = 0h 5m 9s
-   Routing Phase 2: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
+   Routing Phase 0: CPU time = 0h 0m 0.847s, Elapsed time = 0h 0m 0.842s
+   Routing Phase 1: CPU time = 0h 4m 27s, Elapsed time = 0h 4m 25s
+   Routing Phase 2: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
    Routing Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
-   Total Routing: CPU time = 0h 5m 15s, Elapsed time = 0h 5m 13s
+   Total Routing: CPU time = 0h 4m 30s, Elapsed time = 0h 4m 28s
 Generate output files:
-   CPU time = 0h 0m 10s, Elapsed time = 0h 0m 9s
+   CPU time = 0h 0m 8s, Elapsed time = 0h 0m 8s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 7m 7s, Elapsed time = 0h 7m 3s, Peak memory usage = 4125MB</td>
+<td>CPU time = 0h 6m 3s, Elapsed time = 0h 6m 1s, Peak memory usage = 1795MB</td>
 </tr>
 </table>
 <br/>
@@ -129,12 +129,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Logic</td>
-<td>32855/138240</td>
-<td>24%</td>
+<td>30232/138240</td>
+<td>22%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --LUT,ALU,ROM16</td>
-<td>32855(26273 LUT, 6582 ALU, 0 ROM16)</td>
+<td>30232(23775 LUT, 6457 ALU, 0 ROM16)</td>
 <td>-</td>
 </tr>
 <tr>
@@ -144,8 +144,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">Register</td>
-<td>23483/139140</td>
-<td>17%</td>
+<td>18350/139140</td>
+<td>14%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as Latch</td>
@@ -154,8 +154,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --Logic Register as FF</td>
-<td>23483/138240</td>
-<td>17%</td>
+<td>18350/138240</td>
+<td>14%</td>
 </tr>
 <tr>
 <td class="label">&nbsp &nbsp --I/O Register as Latch</td>
@@ -169,27 +169,27 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>29067/69120</td>
-<td>43%</td>
+<td>25597/69120</td>
+<td>38%</td>
 </tr>
 <tr>
 <td class="label">I/O Port</td>
-<td>93</td>
+<td>89</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label">I/O Buf</td>
-<td>87</td>
+<td>83</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label"> &nbsp &nbsp --Input Buf</td>
-<td>10</td>
+<td>7</td>
 <td>-</td>
 </tr>
 <tr>
 <td class="label"> &nbsp &nbsp --Output Buf</td>
-<td>41</td>
+<td>40</td>
 <td>-</td>
 </tr>
 <tr>
@@ -204,8 +204,8 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">BSRAM</td>
-<td>20 SP<br/>139 SDPB<br/>77 SDPX9B<br/></td>
-<td>70%</td>
+<td>20 SP<br/>139 SDPB<br/>16 SDPX9B<br/></td>
+<td>52%</td>
 </tr>
 <tr>
 <td class="label">DSP</td>
@@ -265,7 +265,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">bank 2</td>
-<td>5/50(10%)</td>
+<td>4/50(8%)</td>
 </tr>
 <tr>
 <td class="label">bank 3</td>
@@ -273,11 +273,11 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">bank 4</td>
-<td>4/50(8%)</td>
+<td>2/50(4%)</td>
 </tr>
 <tr>
 <td class="label">bank 5</td>
-<td>3/50(6%)</td>
+<td>6/50(12%)</td>
 </tr>
 <tr>
 <td class="label">bank 6</td>
@@ -289,7 +289,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">bank 10</td>
-<td>4/11(36%)</td>
+<td>0/11(0%)</td>
 </tr>
 </table>
 <br/>
@@ -301,11 +301,11 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">PRIMARY</td>
-<td>6/8(75%)</td>
+<td>5/8(63%)</td>
 </tr>
 <tr>
 <td class="label">LW</td>
-<td>6/8(75%)</td>
+<td>2/8(25%)</td>
 </tr>
 <tr>
 <td class="label">GCLK_PIN</td>
@@ -335,12 +335,12 @@ Generate output files:
 <tr>
 <td class="label">clock_d</td>
 <td>PRIMARY</td>
-<td> PTR0 PTR1 PBR0 PBR1 PBR2 PBR3</td>
+<td> PTR2 PBR0 PBR1 PBR3</td>
 </tr>
 <tr>
 <td class="label">_asic_sram_clkb</td>
 <td>PRIMARY</td>
-<td> PTR1 PTR2 PTR3 PBR1 PBR2 PBR3</td>
+<td> PTR0 PTR1 PTR2 PTR3 PBR0 PBR1 PBR2 PBR3</td>
 </tr>
 <tr>
 <td class="label">_pll_pll_clkout2</td>
@@ -348,47 +348,22 @@ Generate output files:
 <td> PTR0 PTR3 PBR0</td>
 </tr>
 <tr>
-<td class="label">asic_1080</td>
+<td class="label">_dmi_clk_out</td>
 <td>PRIMARY</td>
 <td> PTR0 PTR1 PTR3 PBR0 PBR1</td>
 </tr>
 <tr>
-<td class="label">gw_gao_inst_0/control0[0]</td>
+<td class="label">sram/dff_q_5</td>
 <td>PRIMARY</td>
-<td> PTR0 PTR1 PBR0 PBR1</td>
+<td> PTR0 PTR1</td>
 </tr>
 <tr>
-<td class="label">gw_gao_inst_0/u_la0_top/n5971_5</td>
-<td>PRIMARY</td>
-<td> PBR0 PBR1</td>
-</tr>
-<tr>
-<td class="label">gw_gao_inst_0/gao_jtag_reset</td>
-<td>LW</td>
-<td> -</td>
-</tr>
-<tr>
-<td class="label">gw_gao_inst_0/u_la0_top/jtag_strobe_i</td>
-<td>LW</td>
-<td> -</td>
-</tr>
-<tr>
-<td class="label">gw_gao_inst_0/u_la0_top/n5971_4</td>
-<td>LW</td>
-<td> -</td>
-</tr>
-<tr>
-<td class="label">asic/cpu/cpu_0/icache/bank_ena</td>
+<td class="label">_asic_sram_reset</td>
 <td>LW</td>
 <td> -</td>
 </tr>
 <tr>
 <td class="label">dmi/gw3_top/ddr_rst</td>
-<td>LW</td>
-<td> -</td>
-</tr>
-<tr>
-<td class="label">sram/dff_q_5</td>
 <td>LW</td>
 <td> -</td>
 </tr>
@@ -444,10 +419,10 @@ Generate output files:
 <tr>
 <td class="label">spi_miso</td>
 <td></td>
-<td>T18/2</td>
+<td>U17/2</td>
 <td>N</td>
 <td>in</td>
-<td>IOR8[B]</td>
+<td>IOR1[A]</td>
 <td>LVCMOS33</td>
 <td>OFF</td>
 <td>NONE</td>
@@ -562,72 +537,12 @@ Generate output files:
 <td>NONE</td>
 </tr>
 <tr>
-<td class="label">tms_pad_i</td>
-<td></td>
-<td>H11/10</td>
-<td>N</td>
-<td>in</td>
-<td>IOB169[B]</td>
-<td>LVCMOS33</td>
-<td>OFF</td>
-<td>NONE</td>
-<td>OFF</td>
-<td>ON</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>3.3</td>
-<td>MEDIUM</td>
-<td>NONE</td>
-</tr>
-<tr>
-<td class="label">tck_pad_i</td>
-<td></td>
-<td>H12/10</td>
-<td>N</td>
-<td>in</td>
-<td>IOB173[A]</td>
-<td>LVCMOS33</td>
-<td>OFF</td>
-<td>NONE</td>
-<td>OFF</td>
-<td>ON</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>3.3</td>
-<td>MEDIUM</td>
-<td>NONE</td>
-</tr>
-<tr>
-<td class="label">tdi_pad_i</td>
-<td></td>
-<td>H10/10</td>
-<td>N</td>
-<td>in</td>
-<td>IOB173[B]</td>
-<td>LVCMOS33</td>
-<td>OFF</td>
-<td>NONE</td>
-<td>OFF</td>
-<td>ON</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>3.3</td>
-<td>MEDIUM</td>
-<td>NONE</td>
-</tr>
-<tr>
 <td class="label">spi_sck</td>
 <td></td>
-<td>V18/2</td>
+<td>H15/5</td>
 <td>N</td>
 <td>out</td>
-<td>IOR4[A]</td>
+<td>IOB83[B]</td>
 <td>LVCMOS33</td>
 <td>8</td>
 <td>NONE</td>
@@ -644,10 +559,10 @@ Generate output files:
 <tr>
 <td class="label">spi_ss</td>
 <td></td>
-<td>M15/4</td>
+<td>F17/5</td>
 <td>N</td>
 <td>out</td>
-<td>IOB95[A]</td>
+<td>IOB80[B]</td>
 <td>LVCMOS33</td>
 <td>8</td>
 <td>NONE</td>
@@ -664,10 +579,10 @@ Generate output files:
 <tr>
 <td class="label">spi_mosi</td>
 <td></td>
-<td>M14/4</td>
+<td>E21/5</td>
 <td>N</td>
 <td>out</td>
-<td>IOB93[A]</td>
+<td>IOB76[A]</td>
 <td>LVCMOS33</td>
 <td>8</td>
 <td>NONE</td>
@@ -1104,10 +1019,10 @@ Generate output files:
 <tr>
 <td class="label">ddr3_O_ddr_addr[14]</td>
 <td></td>
-<td>U17/2</td>
+<td>V17/2</td>
 <td>N</td>
 <td>out</td>
-<td>IOR1[A]</td>
+<td>IOR2[B]</td>
 <td>LVCMOS33</td>
 <td>8</td>
 <td>NONE</td>
@@ -1418,26 +1333,6 @@ Generate output files:
 <td>OFF</td>
 <td>OFF</td>
 <td>1.5</td>
-<td>MEDIUM</td>
-<td>NONE</td>
-</tr>
-<tr>
-<td class="label">tdo_pad_o</td>
-<td></td>
-<td>J10/10</td>
-<td>N</td>
-<td>out</td>
-<td>IOB169[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>NONE</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>OFF</td>
-<td>3.3</td>
 <td>MEDIUM</td>
 <td>NONE</td>
 </tr>
@@ -2815,14 +2710,14 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">E21/5</td>
-<td>-</td>
-<td>in</td>
+<td>spi_mosi</td>
+<td>out</td>
 <td>IOB76[A]</td>
 <td>LVCMOS33</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>OFF</td>
-<td>ON</td>
+<td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
@@ -2905,14 +2800,14 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">F17/5</td>
-<td>-</td>
-<td>in</td>
+<td>spi_ss</td>
+<td>out</td>
 <td>IOB80[B]</td>
 <td>LVCMOS33</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>OFF</td>
-<td>ON</td>
+<td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
@@ -2941,14 +2836,14 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">H15/5</td>
-<td>-</td>
-<td>in</td>
+<td>spi_sck</td>
+<td>out</td>
 <td>IOB83[B]</td>
 <td>LVCMOS33</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>OFF</td>
-<td>ON</td>
+<td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
@@ -3103,14 +2998,14 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">M14/4</td>
-<td>spi_mosi</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOB93[A]</td>
 <td>LVCMOS33</td>
 <td>8</td>
-<td>NONE</td>
+<td>UP</td>
 <td>OFF</td>
-<td>OFF</td>
+<td>ON</td>
 <td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
@@ -3139,14 +3034,14 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">M15/4</td>
-<td>spi_ss</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOB95[A]</td>
 <td>LVCMOS33</td>
 <td>8</td>
-<td>NONE</td>
+<td>UP</td>
 <td>OFF</td>
-<td>OFF</td>
+<td>ON</td>
 <td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
@@ -3985,12 +3880,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">J10/10</td>
-<td>tdo_pad_o</td>
+<td>-</td>
 <td>out</td>
 <td>IOB169[A]</td>
 <td>LVCMOS33</td>
 <td>8</td>
-<td>NONE</td>
+<td>UP</td>
 <td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
@@ -4003,12 +3898,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">H11/10</td>
-<td>tms_pad_i</td>
+<td>-</td>
 <td>in</td>
 <td>IOB169[B]</td>
 <td>LVCMOS33</td>
-<td>OFF</td>
-<td>NONE</td>
+<td>8</td>
+<td>UP</td>
 <td>OFF</td>
 <td>ON</td>
 <td>OFF</td>
@@ -4057,12 +3952,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">H12/10</td>
-<td>tck_pad_i</td>
+<td>-</td>
 <td>in</td>
 <td>IOB173[A]</td>
 <td>LVCMOS33</td>
-<td>OFF</td>
-<td>NONE</td>
+<td>8</td>
+<td>UP</td>
 <td>OFF</td>
 <td>ON</td>
 <td>OFF</td>
@@ -4075,12 +3970,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">H10/10</td>
-<td>tdi_pad_i</td>
+<td>-</td>
 <td>in</td>
 <td>IOB173[B]</td>
 <td>LVCMOS33</td>
-<td>OFF</td>
-<td>NONE</td>
+<td>8</td>
+<td>UP</td>
 <td>OFF</td>
 <td>ON</td>
 <td>OFF</td>
@@ -6001,14 +5896,14 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">U17/2</td>
-<td>ddr3_O_ddr_addr[14]</td>
-<td>out</td>
+<td>spi_miso</td>
+<td>in</td>
 <td>IOR1[A]</td>
 <td>LVCMOS33</td>
-<td>8</td>
+<td>OFF</td>
 <td>NONE</td>
 <td>OFF</td>
-<td>OFF</td>
+<td>ON</td>
 <td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
@@ -6037,14 +5932,14 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">V17/2</td>
-<td>-</td>
-<td>in</td>
+<td>ddr3_O_ddr_addr[14]</td>
+<td>out</td>
 <td>IOR2[B]</td>
 <td>LVCMOS33</td>
 <td>8</td>
-<td>UP</td>
+<td>NONE</td>
 <td>OFF</td>
-<td>ON</td>
+<td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
@@ -6055,14 +5950,14 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">V18/2</td>
-<td>spi_sck</td>
-<td>out</td>
+<td>-</td>
+<td>in</td>
 <td>IOR4[A]</td>
 <td>LVCMOS33</td>
 <td>8</td>
-<td>NONE</td>
+<td>UP</td>
 <td>OFF</td>
-<td>OFF</td>
+<td>ON</td>
 <td>OFF</td>
 <td>OFF</td>
 <td>OFF</td>
@@ -6145,12 +6040,12 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">T18/2</td>
-<td>spi_miso</td>
+<td>-</td>
 <td>in</td>
 <td>IOR8[B]</td>
 <td>LVCMOS33</td>
-<td>OFF</td>
-<td>NONE</td>
+<td>8</td>
+<td>UP</td>
 <td>OFF</td>
 <td>ON</td>
 <td>OFF</td>
